updateProvider